test/extension_test_cases/valid/dynamic/dynamiccomplexfunctions0.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  doNothing(a) is
    return a
  end
  i := call doNothing(1) ;
  print "answer is " ;
  println i ;
  exit 0
end
