test/extension_test_cases/invalid/dynamic/dynamicambigious.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  a := null ;
  read a ;
  println a ;
  b := null ;
  free b ;
  println b ;
  exit 0
end
